common-applications/infra-test-cluster/hk/openubmc/om-webserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: om-webserver-service
  namespace: openubmc
spec:
  ports:
    - name: om-webserver-service
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: om-webserver
  type: ClusterIP
